Details
-
Type:
Bug
-
Status: Closed
-
Priority:
Not Evaluated
-
Resolution: Done
-
Affects Version/s: 6.3.0
-
Fix Version/s: 6.3.1, 6.4.0 Beta1
-
Component/s: Quick: 3D
-
Labels:None
-
Epic Link:
-
Commits:975c5cd149 (qt/qtquick3d/dev) 975c5cd149 (qt/tqtc-qtquick3d/dev) 67adaf2f97 (qt/qtquick3d/6.3) 67adaf2f97 (qt/tqtc-qtquick3d/6.3) 67adaf2f97 (qt/tqtc-qtquick3d/6.3.1) 975c5cd149 (qt/qtquick3d/6.4)
Description
If the parallax correction property is set to true and the reflection probe is not positioned at the origin. The reflections are not correct.