Fix reflection probe incorrect parallax correction

The parallax correction uses the box max and min
to sample correctly from the cubemap. The max and
min values were not translated to the probe world
position causing the issue.

Fixes: QTBUG-102850
Change-Id: I2eb820f28b8046904f11d3b112842b83414778db
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit 975c5cd1494de04b531935884ee212744cdccf12)