src/runtimerender/rendererimpl/qssglayerrenderdata.cpp
@@ -1291,8 +1291,8 @@ void QSSGLayerRenderData::prepareReflectionProbesForRender()
                     renderableObj->distanceFromReflectionProbe = distance;
                     renderableObj->reflectionProbe.parallaxCorrection = probe->parallaxCorrection;
                     renderableObj->reflectionProbe.probeBoxCenter = probeBoundCenter;
-                    renderableObj->reflectionProbe.probeBoxMax = probeExtent;
-                    renderableObj->reflectionProbe.probeBoxMin = probeExtent * -1;
+                    renderableObj->reflectionProbe.probeBoxMax = probeBound.maximum;
+                    renderableObj->reflectionProbe.probeBoxMin = probeBound.minimum;
                     renderableObj->reflectionProbe.enabled = true;
                     reflectionObjectCount++;
                 }
